
2003-04-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, interface/w32g_subwin3.c,
	  timidity/controls.h, timidity/playmidi.c:
	  Support for CTLE_MUTE.

2003-04-30  Saito <timidity@flashmail.com>

	* timidity/mix.c:
	  Bug fix in envelope generator.
	  
2003-04-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/timidity.c:
	  Support for channel mute by temperament type.
	  Fix behaviour of quiet channel option -Q0.
	  Fix around temperament control SysEx.

2003-04-29  Saito <timidity@flashmail.com>

	* timidity/instrum.c:
	  Fix behaviour of user drumset / instrument.
	* timidity/tables.c, timidity/mix.c:
	  Modify envelope generator.
	* timidity/playmidi.c:
	  Disable Rx. Note Off for the moment.
	* timidity/sndfont.c:
	  Fix about initialization.

2003-04-29  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/playmidi.c, timidity/mod2midi.c:
	  Fix around MOD.

2003-04-24  Saito <timidity@flashmail.com>

	* timidity/reverb.c, timidity/playmidi.c, timidity/readmidi.c:
	  Fix around new reverb.
	* timidity/tables.c:
	  Randomize triangular waveform for SoundFont's LFO.
	* timidity/instrum.h:
	  Add some parameters to Sample struct.

2003-04-23  Saito <timidity@flashmail.com>

	* timidity/sndfont.c, timidity/playmidi.c, timidity/instrum.c:
	  Fix about cfgforsf.

2003-04-22  Saito <timidity@flashmail.com>

	* timidity/playmidi.c:
	  Fix about modulation envelope to picth.
	* timidity/reverb.c:
	  Fix around reverb initialize.
	* timidity/recache.c, timidity/resample.c:
	  Fix around CSPLINE_INTERPOLATION.

2003-04-21  Saito <timidity@flashmail.com>

	* timidity/instrum.[ch], timidity/playmidi.c,
	  timidity/smplfile.c, timidity/sndfont.c, timidity/mix.c:
	  Add some internal parameters.
	  Change LPF behaviour.

2003-04-19  Saito <timidity@flashmail.com>

	* timidity/reverb.c:
	  Fix about access violation.
	* timidity/playmidi.[ch], timidity/mix.c:
	  Support for LPF transition. (the source of this code is "fluidsynth")
